docs/0.18.1/_sources/api/gammapy.datasets.SpectrumDatasetOnOff.rst.txt
SpectrumDatasetOnOff
====================

.. currentmodule:: gammapy.datasets

.. autoclass:: SpectrumDatasetOnOff
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumDatasetOnOff.alpha
      ~SpectrumDatasetOnOff.background
      ~SpectrumDatasetOnOff.background_model
      ~SpectrumDatasetOnOff.counts
      ~SpectrumDatasetOnOff.data_shape
      ~SpectrumDatasetOnOff.edisp
      ~SpectrumDatasetOnOff.energy_range
      ~SpectrumDatasetOnOff.evaluators
      ~SpectrumDatasetOnOff.excess
      ~SpectrumDatasetOnOff.exposure
      ~SpectrumDatasetOnOff.geoms
      ~SpectrumDatasetOnOff.mask
      ~SpectrumDatasetOnOff.mask_fit
      ~SpectrumDatasetOnOff.mask_safe
      ~SpectrumDatasetOnOff.mask_safe_edisp
      ~SpectrumDatasetOnOff.mask_safe_image
      ~SpectrumDatasetOnOff.mask_safe_psf
      ~SpectrumDatasetOnOff.models
      ~SpectrumDatasetOnOff.name
      ~SpectrumDatasetOnOff.psf
      ~SpectrumDatasetOnOff.stat_type
      ~SpectrumDatasetOnOff.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumDatasetOnOff.apply_mask_safe
      ~SpectrumDatasetOnOff.copy
      ~SpectrumDatasetOnOff.create
      ~SpectrumDatasetOnOff.cutout
      ~SpectrumDatasetOnOff.downsample
      ~SpectrumDatasetOnOff.fake
      ~SpectrumDatasetOnOff.from_dict
      ~SpectrumDatasetOnOff.from_geoms
      ~SpectrumDatasetOnOff.from_hdulist
      ~SpectrumDatasetOnOff.from_ogip_files
      ~SpectrumDatasetOnOff.from_spectrum_dataset
      ~SpectrumDatasetOnOff.info_dict
      ~SpectrumDatasetOnOff.npred
      ~SpectrumDatasetOnOff.npred_background
      ~SpectrumDatasetOnOff.npred_off
      ~SpectrumDatasetOnOff.npred_signal
      ~SpectrumDatasetOnOff.pad
      ~SpectrumDatasetOnOff.peek
      ~SpectrumDatasetOnOff.plot_counts
      ~SpectrumDatasetOnOff.plot_excess
      ~SpectrumDatasetOnOff.plot_fit
      ~SpectrumDatasetOnOff.plot_residuals
      ~SpectrumDatasetOnOff.plot_residuals_spatial
      ~SpectrumDatasetOnOff.plot_residuals_spectral
      ~SpectrumDatasetOnOff.read
      ~SpectrumDatasetOnOff.resample_energy_axis
      ~SpectrumDatasetOnOff.reset_data_cache
      ~SpectrumDatasetOnOff.residuals
      ~SpectrumDatasetOnOff.slice_by_energy
      ~SpectrumDatasetOnOff.slice_by_idx
      ~SpectrumDatasetOnOff.stack
      ~SpectrumDatasetOnOff.stat_array
      ~SpectrumDatasetOnOff.stat_sum
      ~SpectrumDatasetOnOff.to_dict
      ~SpectrumDatasetOnOff.to_hdulist
      ~SpectrumDatasetOnOff.to_image
      ~SpectrumDatasetOnOff.to_ogip_files
      ~SpectrumDatasetOnOff.to_spectrum_dataset
      ~SpectrumDatasetOnOff.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: alpha
   .. autoattribute:: background
   .. autoattribute:: background_model
   .. autoattribute:: counts
   .. autoattribute:: data_shape
   .. autoattribute:: edisp
   .. autoattribute:: energy_range
   .. autoattribute:: evaluators
   .. autoattribute:: excess
   .. autoattribute:: exposure
   .. autoattribute:: geoms
   .. autoattribute:: mask
   .. autoattribute:: mask_fit
   .. autoattribute:: mask_safe
   .. autoattribute:: mask_safe_edisp
   .. autoattribute:: mask_safe_image
   .. autoattribute:: mask_safe_psf
   .. autoattribute:: models
   .. autoattribute:: name
   .. autoattribute:: psf
   .. autoattribute:: stat_type
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: apply_mask_safe
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: cutout
   .. automethod:: downsample
   .. automethod:: fake
   .. automethod:: from_dict
   .. automethod:: from_geoms
   .. automethod:: from_hdulist
   .. automethod:: from_ogip_files
   .. automethod:: from_spectrum_dataset
   .. automethod:: info_dict
   .. automethod:: npred
   .. automethod:: npred_background
   .. automethod:: npred_off
   .. automethod:: npred_signal
   .. automethod:: pad
   .. automethod:: peek
   .. automethod:: plot_counts
   .. automethod:: plot_excess
   .. automethod:: plot_fit
   .. automethod:: plot_residuals
   .. automethod:: plot_residuals_spatial
   .. automethod:: plot_residuals_spectral
   .. automethod:: read
   .. automethod:: resample_energy_axis
   .. automethod:: reset_data_cache
   .. automethod:: residuals
   .. automethod:: slice_by_energy
   .. automethod:: slice_by_idx
   .. automethod:: stack
   .. automethod:: stat_array
   .. automethod:: stat_sum
   .. automethod:: to_dict
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: to_ogip_files
   .. automethod:: to_spectrum_dataset
   .. automethod:: write
